# otus_h6_matrix

./: .travis.yml  CMakeLists.txt  README.md
src/: main.cpp  matrix.h
tests/: gtest.cpp
